--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 </div>
 <div class="container">
     <input type="text" class="input-text" placeholder="Type a To DO" [(ngModel)]="todoValue" (keyup.enter)="addItem()" />
-    <button class="add-btn" (click)="addItem()">Add To DO</button>
+    <button class="add-btn" (click)="addItem()">Add a To DO</button>
 </div>
 <div class="list">
     <ul>
